--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,7 +3,7 @@ version: 0.2
 phases:
   install:
     commands:
-      - npm install
+      - npm install --legacy-peer-dps
 
   build:
     commands:
@@ -11,7 +11,7 @@ phases:
       - mkdir -p dist
       - cp -r out/* dist/
       - cp -r public/* dist/
-      
+
 artifacts:
   base-directory: dist
   files: '**/*'
