--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,7 +3,7 @@ version: 0.2
 phases:
   install:
     commands:
-      - npm install --legacy-peer-dps
+      - npm install --legacy-peer-deps
 
   build:
     commands:
